<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="12" >

    <ImageView
        android:id="@+id/newReceipt"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="8"
        android:contentDescription="@string/newPhoto" />

    <EditText
        android:id="@+id/newReceiptDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/correctTheDate"
        android:inputType="date" />

    <EditText
        android:id="@+id/newReceiptTotalAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/correctThePrice"
        android:inputType="text" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addPurchaseLabel" />

</LinearLayout>